# osworld-agentified

./: .gitignore  README.md  main.py  pyproject.toml
osworld_runner/: requirements.txt  runner.py
src/: __init__.py
src/green_agent/: __init__.py  agent.py  osworld_green_agent.toml
src/my_util/: __init__.py  my_a2a.py
src/white_agent/: __init__.py  agent.py
